# cpp files, this list is maintained manually

set(OREData_SRC configuration/basecorrelationcurveconfig.cpp
configuration/bootstrapconfig.cpp
configuration/capfloorvolcurveconfig.cpp
configuration/cdsvolcurveconfig.cpp
configuration/commoditycurveconfig.cpp
configuration/commodityvolcurveconfig.cpp
configuration/conventions.cpp
configuration/correlationcurveconfig.cpp
configuration/curveconfig.cpp
configuration/curveconfigurations.cpp
configuration/defaultcurveconfig.cpp
configuration/equitycurveconfig.cpp
configuration/equityvolcurveconfig.cpp
configuration/fxvolcurveconfig.cpp
configuration/genericyieldvolcurveconfig.cpp
configuration/iborfallbackconfig.cpp
configuration/inflationcapfloorvolcurveconfig.cpp
configuration/inflationcurveconfig.cpp
configuration/onedimsolverconfig.cpp
configuration/reportconfig.cpp
configuration/volatilityconfig.cpp
configuration/yieldcurveconfig.cpp
marketdata/basecorrelationcurve.cpp
marketdata/capfloorvolcurve.cpp
marketdata/cdsvolcurve.cpp
marketdata/commoditycurve.cpp
marketdata/commodityvolcurve.cpp
marketdata/correlationcurve.cpp
marketdata/csvloader.cpp
marketdata/curvespec.cpp
marketdata/curvespecparser.cpp
marketdata/defaultcurve.cpp
marketdata/dependencygraph.cpp
marketdata/equitycurve.cpp
marketdata/equityvolcurve.cpp
marketdata/expiry.cpp
marketdata/fittedbondcurvehelpermarket.cpp
marketdata/fixings.cpp
marketdata/fxspot.cpp
marketdata/fxtriangulation.cpp
marketdata/fxvolcurve.cpp
marketdata/genericyieldvolcurve.cpp
marketdata/inflationcapfloorvolcurve.cpp
marketdata/inflationcurve.cpp
marketdata/inmemoryloader.cpp
marketdata/market.cpp
marketdata/marketdatum.cpp
marketdata/marketdatumparser.cpp
marketdata/marketimpl.cpp
marketdata/security.cpp
marketdata/strike.cpp
marketdata/swaptionvolcurve.cpp
marketdata/todaysmarket.cpp
marketdata/todaysmarketcalibrationinfo.cpp
marketdata/todaysmarketparameters.cpp
marketdata/wrappedmarket.cpp
marketdata/yieldcurve.cpp
marketdata/yieldvolcurve.cpp
model/calibrationbasket.cpp
model/calibrationconfiguration.cpp
model/calibrationinstrumentfactory.cpp
model/calibrationinstruments/cpicapfloor.cpp
model/calibrationinstruments/yoycapfloor.cpp
model/calibrationinstruments/yoyswap.cpp
model/crcirbuilder.cpp
model/crcirdata.cpp
model/crlgmbuilder.cpp
model/crlgmdata.cpp
model/crossassetmodelbuilder.cpp
model/crossassetmodeldata.cpp
model/eqbsbuilder.cpp
model/eqbsdata.cpp
model/fxbsbuilder.cpp
model/fxbsdata.cpp
model/inflation/infdkbuilder.cpp
model/inflation/infdkdata.cpp
model/inflation/infjybuilder.cpp
model/inflation/infjydata.cpp
model/inflation/inflationmodeldata.cpp
model/irlgmdata.cpp
model/lgmbuilder.cpp
model/lgmdata.cpp
model/modeldata.cpp
model/modelparameter.cpp
model/utilities.cpp
portfolio/asianoption.cpp
portfolio/bond.cpp
portfolio/bondutils.cpp
portfolio/builders/capfloor.cpp
portfolio/builders/capflooredaverageonindexedcouponleg.cpp
portfolio/builders/capfloorediborleg.cpp
portfolio/builders/capflooredovernightindexedcouponleg.cpp
portfolio/builders/cms.cpp
portfolio/builders/cmsspread.cpp
portfolio/builders/cpicapfloor.cpp
portfolio/builders/durationadjustedcms.cpp
portfolio/builders/swaption.cpp
portfolio/builders/yoycapfloor.cpp
portfolio/capfloor.cpp
portfolio/commodityasianoption.cpp
portfolio/commodityforward.cpp
portfolio/commodityoption.cpp
portfolio/creditdefaultswap.cpp
portfolio/creditdefaultswapdata.cpp
portfolio/creditdefaultswapoption.cpp
portfolio/durationadjustedcmslegbuilder.cpp
portfolio/durationadjustedcmslegdata.cpp
portfolio/enginedata.cpp
portfolio/enginefactory.cpp
portfolio/envelope.cpp
portfolio/equityasianoption.cpp
portfolio/equityforward.cpp
portfolio/equityfuturesoption.cpp
portfolio/equityoption.cpp
portfolio/equityswap.cpp
portfolio/fixingdates.cpp
portfolio/forwardbond.cpp
portfolio/forwardrateagreement.cpp
portfolio/fxasianoption.cpp
portfolio/fxforward.cpp
portfolio/fxoption.cpp
portfolio/fxswap.cpp
portfolio/indexing.cpp
portfolio/legbuilders.cpp
portfolio/legdata.cpp
portfolio/legdatafactory.cpp
portfolio/nettingsetdefinition.cpp
portfolio/nettingsetmanager.cpp
portfolio/optionasiandata.cpp
portfolio/optiondata.cpp
portfolio/optionexercisedata.cpp
portfolio/optionpaymentdata.cpp
portfolio/optionwrapper.cpp
portfolio/portfolio.cpp
portfolio/premiumdata.cpp
portfolio/referencedata.cpp
portfolio/referencedatafactory.cpp
portfolio/schedule.cpp
portfolio/swap.cpp
portfolio/swaption.cpp
portfolio/trade.cpp
portfolio/tradeactions.cpp
portfolio/tradefactory.cpp
portfolio/underlying.cpp
portfolio/vanillaoption.cpp
report/csvreport.cpp
utilities/calendaradjustmentconfig.cpp
utilities/conventionsbasedfutureexpiry.cpp
utilities/correlationmatrix.cpp
utilities/csvfilereader.cpp
utilities/currencycheck.cpp
utilities/currencyconfig.cpp
utilities/dategrid.cpp
utilities/flowanalysis.cpp
utilities/indexparser.cpp
utilities/log.cpp
utilities/marketdata.cpp
utilities/osutils.cpp
utilities/parsers.cpp
utilities/progressbar.cpp
utilities/strike.cpp
utilities/to_string.cpp
utilities/wildcard.cpp
utilities/xmlutils.cpp)

# hpp files, this list is maintained manually

set(OREData_HDR auto_link.hpp
configuration/basecorrelationcurveconfig.hpp
configuration/bootstrapconfig.hpp
configuration/capfloorvolcurveconfig.hpp
configuration/cdsvolcurveconfig.hpp
configuration/commoditycurveconfig.hpp
configuration/commodityvolcurveconfig.hpp
configuration/conventions.hpp
configuration/correlationcurveconfig.hpp
configuration/curveconfig.hpp
configuration/curveconfigurations.hpp
configuration/defaultcurveconfig.hpp
configuration/equitycurveconfig.hpp
configuration/equityvolcurveconfig.hpp
configuration/fxspotconfig.hpp
configuration/fxvolcurveconfig.hpp
configuration/genericyieldvolcurveconfig.hpp
configuration/iborfallbackconfig.hpp
configuration/inflationcapfloorvolcurveconfig.hpp
configuration/inflationcurveconfig.hpp
configuration/onedimsolverconfig.hpp
configuration/reportconfig.hpp
configuration/securityconfig.hpp
configuration/swaptionvolcurveconfig.hpp
configuration/volatilityconfig.hpp
configuration/yieldcurveconfig.hpp
configuration/yieldvolcurveconfig.hpp
marketdata/basecorrelationcurve.hpp
marketdata/capfloorvolcurve.hpp
marketdata/cdsvolcurve.hpp
marketdata/commoditycurve.hpp
marketdata/commodityvolcurve.hpp
marketdata/compositeloader.hpp
marketdata/correlationcurve.hpp
marketdata/csvloader.hpp
marketdata/curvespec.hpp
marketdata/curvespecparser.hpp
marketdata/defaultcurve.hpp
marketdata/dependencygraph.hpp
marketdata/equitycurve.hpp
marketdata/equityvolcurve.hpp
marketdata/expiry.hpp
marketdata/fittedbondcurvehelpermarket.hpp
marketdata/fixings.hpp
marketdata/fxspot.hpp
marketdata/fxtriangulation.hpp
marketdata/fxvolcurve.hpp
marketdata/genericyieldvolcurve.hpp
marketdata/inflationcapfloorvolcurve.hpp
marketdata/inflationcurve.hpp
marketdata/inmemoryloader.hpp
marketdata/loader.hpp
marketdata/market.hpp
marketdata/marketdatum.hpp
marketdata/marketdatumparser.hpp
marketdata/marketimpl.hpp
marketdata/security.hpp
marketdata/strike.hpp
marketdata/structuredcurveerror.hpp
marketdata/swaptionvolcurve.hpp
marketdata/todaysmarket.hpp
marketdata/todaysmarketcalibrationinfo.hpp
marketdata/todaysmarketparameters.hpp
marketdata/wrappedmarket.hpp
marketdata/yieldcurve.hpp
marketdata/yieldvolcurve.hpp
model/calibrationbasket.hpp
model/calibrationconfiguration.hpp
model/calibrationinstrumentfactory.hpp
model/calibrationinstruments/cpicapfloor.hpp
model/calibrationinstruments/yoycapfloor.hpp
model/calibrationinstruments/yoyswap.hpp
model/crcirbuilder.hpp
model/crcirdata.hpp
model/crlgmbuilder.hpp
model/crlgmdata.hpp
model/crossassetmodelbuilder.hpp
model/crossassetmodeldata.hpp
model/eqbsbuilder.hpp
model/eqbsdata.hpp
model/fxbsbuilder.hpp
model/fxbsdata.hpp
model/inflation/infdkbuilder.hpp
model/inflation/infdkdata.hpp
model/inflation/infjybuilder.hpp
model/inflation/infjydata.hpp
model/inflation/inflationmodeldata.hpp
model/irlgmdata.hpp
model/lgmbuilder.hpp
model/lgmdata.hpp
model/marketobserver.hpp
model/modelbuilder.hpp
model/modeldata.hpp
model/modelparameter.hpp
model/structuredmodelerror.hpp
model/utilities.hpp
portfolio/asianoption.hpp
portfolio/bond.hpp
portfolio/bondutils.hpp
portfolio/builders/asianoption.hpp
portfolio/builders/bond.hpp
portfolio/builders/cachingenginebuilder.hpp
portfolio/builders/capfloor.hpp
portfolio/builders/capflooredaverageonindexedcouponleg.hpp
portfolio/builders/capflooredcpileg.hpp
portfolio/builders/capfloorediborleg.hpp
portfolio/builders/capfloorednonstandardyoyleg.hpp
portfolio/builders/capflooredovernightindexedcouponleg.hpp
portfolio/builders/capflooredyoyleg.hpp
portfolio/builders/cms.hpp
portfolio/builders/cmsspread.hpp
portfolio/builders/commodityasianoption.hpp
portfolio/builders/commodityforward.hpp
portfolio/builders/commodityoption.hpp
portfolio/builders/cpicapfloor.hpp
portfolio/builders/creditdefaultswap.hpp
portfolio/builders/creditdefaultswapoption.hpp
portfolio/builders/durationadjustedcms.hpp
portfolio/builders/equityasianoption.hpp
portfolio/builders/equityforward.hpp
portfolio/builders/equityfuturesoption.hpp
portfolio/builders/equityoption.hpp
portfolio/builders/forwardbond.hpp
portfolio/builders/fxasianoption.hpp
portfolio/builders/fxforward.hpp
portfolio/builders/fxoption.hpp
portfolio/builders/quantoequityoption.hpp
portfolio/builders/quantovanillaoption.hpp
portfolio/builders/swap.hpp
portfolio/builders/swaption.hpp
portfolio/builders/vanillaoption.hpp
portfolio/builders/yoycapfloor.hpp
portfolio/capfloor.hpp
portfolio/commodityasianoption.hpp
portfolio/commodityforward.hpp
portfolio/commodityoption.hpp
portfolio/creditdefaultswap.hpp
portfolio/creditdefaultswapdata.hpp
portfolio/creditdefaultswapoption.hpp
portfolio/durationadjustedcmslegbuilder.hpp
portfolio/durationadjustedcmslegdata.hpp
portfolio/enginedata.hpp
portfolio/enginefactory.hpp
portfolio/envelope.hpp
portfolio/equityasianoption.hpp
portfolio/equityforward.hpp
portfolio/equityfuturesoption.hpp
portfolio/equityoption.hpp
portfolio/equityswap.hpp
portfolio/fixingdates.hpp
portfolio/forwardbond.hpp
portfolio/forwardrateagreement.hpp
portfolio/fxasianoption.hpp
portfolio/fxforward.hpp
portfolio/fxoption.hpp
portfolio/fxswap.hpp
portfolio/indexing.hpp
portfolio/instrumentwrapper.hpp
portfolio/legbuilders.hpp
portfolio/legdata.hpp
portfolio/legdatafactory.hpp
portfolio/nettingsetdefinition.hpp
portfolio/nettingsetmanager.hpp
portfolio/optionasiandata.hpp
portfolio/optiondata.hpp
portfolio/optionexercisedata.hpp
portfolio/optionpaymentdata.hpp
portfolio/optionwrapper.hpp
portfolio/portfolio.hpp
portfolio/premiumdata.hpp
portfolio/referencedata.hpp
portfolio/referencedatafactory.hpp
portfolio/schedule.hpp
portfolio/structuredtradeerror.hpp
portfolio/swap.hpp
portfolio/swaption.hpp
portfolio/trade.hpp
portfolio/tradeactions.hpp
portfolio/tradefactory.hpp
portfolio/underlying.hpp
portfolio/vanillaoption.hpp
report/csvreport.hpp
report/inmemoryreport.hpp
report/report.hpp
utilities/calendaradjustmentconfig.hpp
utilities/conventionsbasedfutureexpiry.hpp
utilities/correlationmatrix.hpp
utilities/csvfilereader.hpp
utilities/currencycheck.hpp
utilities/currencyconfig.hpp
utilities/dategrid.hpp
utilities/flowanalysis.hpp
utilities/indexparser.hpp
utilities/log.hpp
utilities/marketdata.hpp
utilities/osutils.hpp
utilities/parsers.hpp
utilities/progressbar.hpp
utilities/serializationdate.hpp
utilities/serializationdaycounter.hpp
utilities/serializationperiod.hpp
utilities/strike.hpp
utilities/timeperiod.hpp
utilities/to_string.hpp
utilities/vectorutils.hpp
utilities/wildcard.hpp
utilities/xmlutils.hpp
version.hpp)

writeAll("ored" "ored.hpp" "auto_link.hpp" "${OREData_HDR}")
add_library(${ORED_LIB_NAME} ${OREData_SRC})
target_link_libraries(${ORED_LIB_NAME} ${QLE_LIB_NAME})
target_link_libraries(${ORED_LIB_NAME} ${QL_LIB_NAME})
target_link_libraries(${ORED_LIB_NAME} ${Boost_LIBRARIES})


install(DIRECTORY . DESTINATION include/ored
        FILES_MATCHING PATTERN "*.hpp" PATTERN "*.h")

install(TARGETS ${ORED_LIB_NAME}
        ARCHIVE DESTINATION lib
        LIBRARY DESTINATION lib
        PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
        )

