# cpp files, this list is maintained manually

set(OREData_SRC configuration/basecorrelationcurveconfig.cpp
configuration/bootstrapconfig.cpp
configuration/capfloorvolcurveconfig.cpp
configuration/cdsvolcurveconfig.cpp
configuration/commoditycurveconfig.cpp
configuration/commodityvolcurveconfig.cpp
configuration/conventions.cpp
configuration/correlationcurveconfig.cpp
configuration/curveconfig.cpp
configuration/curveconfigurations.cpp
configuration/defaultcurveconfig.cpp
configuration/equitycurveconfig.cpp
configuration/equityvolcurveconfig.cpp
configuration/fxvolcurveconfig.cpp
configuration/genericyieldvolcurveconfig.cpp
configuration/iborfallbackconfig.cpp
configuration/inflationcapfloorvolcurveconfig.cpp
configuration/inflationcurveconfig.cpp
configuration/onedimsolverconfig.cpp
configuration/reportconfig.cpp
configuration/volatilityconfig.cpp
configuration/yieldcurveconfig.cpp
marketdata/adjustmentfactors.cpp
marketdata/basecorrelationcurve.cpp
marketdata/capfloorvolcurve.cpp
marketdata/cdsvolcurve.cpp
marketdata/clonedloader.cpp
marketdata/commoditycurve.cpp
marketdata/commodityvolcurve.cpp
marketdata/correlationcurve.cpp
marketdata/csvloader.cpp
marketdata/curvespec.cpp
marketdata/curvespecparser.cpp
marketdata/defaultcurve.cpp
marketdata/dependencygraph.cpp
marketdata/equitycurve.cpp
marketdata/equityvolcurve.cpp
marketdata/expiry.cpp
marketdata/fittedbondcurvehelpermarket.cpp
marketdata/fixings.cpp
marketdata/fxtriangulation.cpp
marketdata/fxvolcurve.cpp
marketdata/genericyieldvolcurve.cpp
marketdata/inflationcapfloorvolcurve.cpp
marketdata/inflationcurve.cpp
marketdata/inmemoryloader.cpp
marketdata/loader.cpp
marketdata/market.cpp
marketdata/marketdatum.cpp
marketdata/marketdatumparser.cpp
marketdata/marketimpl.cpp
marketdata/security.cpp
marketdata/strike.cpp
marketdata/swaptionvolcurve.cpp
marketdata/todaysmarket.cpp
marketdata/todaysmarketcalibrationinfo.cpp
marketdata/todaysmarketparameters.cpp
marketdata/wrappedmarket.cpp
marketdata/yieldcurve.cpp
marketdata/yieldvolcurve.cpp
model/blackscholesmodelbuilder.cpp
model/blackscholesmodelbuilderbase.cpp
model/calibrationbasket.cpp
model/calibrationconfiguration.cpp
model/calibrationinstrumentfactory.cpp
model/calibrationinstruments/cpicapfloor.cpp
model/calibrationinstruments/yoycapfloor.cpp
model/calibrationinstruments/yoyswap.cpp
model/calibrationpointcache.cpp
model/commodityschwartzmodelbuilder.cpp
model/commodityschwartzmodeldata.cpp
model/crcirbuilder.cpp
model/crcirdata.cpp
model/crlgmbuilder.cpp
model/crlgmdata.cpp
model/crossassetmodelbuilder.cpp
model/crossassetmodeldata.cpp
model/eqbsbuilder.cpp
model/eqbsdata.cpp
model/fxbsbuilder.cpp
model/fxbsdata.cpp
model/hwbuilder.cpp
model/inflation/infdkbuilder.cpp
model/inflation/infdkdata.cpp
model/inflation/infjybuilder.cpp
model/inflation/infjydata.cpp
model/inflation/inflationmodeldata.cpp
model/irhwmodeldata.cpp
model/irlgmdata.cpp
model/irmodeldata.cpp
model/lgmbuilder.cpp
model/lgmdata.cpp
model/localvolmodelbuilder.cpp
model/modeldata.cpp
model/modelparameter.cpp
model/utilities.cpp
portfolio/asianoption.cpp
portfolio/barrierdata.cpp
portfolio/barrieroption.cpp
portfolio/barrieroptionwrapper.cpp
portfolio/basketdata.cpp
portfolio/bond.cpp
portfolio/bondoption.cpp
portfolio/bondrepo.cpp
portfolio/bondtotalreturnswap.cpp
portfolio/bondutils.cpp
portfolio/builders/bond.cpp
portfolio/builders/bondoption.cpp
portfolio/builders/bondrepo.cpp
portfolio/builders/bondtotalreturnswap.cpp
portfolio/builders/capfloor.cpp
portfolio/builders/capflooredaverageonindexedcouponleg.cpp
portfolio/builders/capflooredcpileg.cpp
portfolio/builders/capfloorediborleg.cpp
portfolio/builders/capfloorednonstandardyoyleg.cpp
portfolio/builders/capflooredovernightindexedcouponleg.cpp
portfolio/builders/capflooredyoyleg.cpp
portfolio/builders/cdo.cpp
portfolio/builders/cms.cpp
portfolio/builders/cmsspread.cpp
portfolio/builders/commodityapo.cpp
portfolio/builders/commodityapomodelbuilder.cpp
portfolio/builders/commodityasianoption.cpp
portfolio/builders/commodityforward.cpp
portfolio/builders/commodityoption.cpp
portfolio/builders/commodityspreadoption.cpp
portfolio/builders/commodityswap.cpp
portfolio/builders/commodityswaption.cpp
portfolio/builders/cpicapfloor.cpp
portfolio/builders/creditdefaultswap.cpp
portfolio/builders/creditdefaultswapoption.cpp
portfolio/builders/creditlinkedswap.cpp
portfolio/builders/currencyswap.cpp
portfolio/builders/durationadjustedcms.cpp
portfolio/builders/equityasianoption.cpp
portfolio/builders/equitybarrieroption.cpp
portfolio/builders/equitycompositeoption.cpp
portfolio/builders/equitydigitaloption.cpp
portfolio/builders/equitydoublebarrieroption.cpp
portfolio/builders/equitydoubletouchoption.cpp
portfolio/builders/equityforward.cpp
portfolio/builders/equityfuturesoption.cpp
portfolio/builders/equityoption.cpp
portfolio/builders/equitytouchoption.cpp
portfolio/builders/forwardbond.cpp
portfolio/builders/fxasianoption.cpp
portfolio/builders/fxbarrieroption.cpp
portfolio/builders/fxdigitalbarrieroption.cpp
portfolio/builders/fxdigitaloption.cpp
portfolio/builders/fxdoublebarrieroption.cpp
portfolio/builders/fxdoubletouchoption.cpp
portfolio/builders/fxforward.cpp
portfolio/builders/fxoption.cpp
portfolio/builders/fxtouchoption.cpp
portfolio/builders/indexcreditdefaultswap.cpp
portfolio/builders/indexcreditdefaultswapoption.cpp
portfolio/builders/multilegoption.cpp
portfolio/builders/quantoequityoption.cpp
portfolio/builders/swap.cpp
portfolio/builders/swaption.cpp
portfolio/builders/varianceswap.cpp
portfolio/builders/yoycapfloor.cpp
portfolio/capfloor.cpp
portfolio/cdo.cpp
portfolio/cliquetoption.cpp
portfolio/commodityapo.cpp
portfolio/commoditydigitalapo.cpp
portfolio/commoditydigitaloption.cpp
portfolio/commodityforward.cpp
portfolio/commoditylegbuilder.cpp
portfolio/commoditylegdata.cpp
portfolio/commodityoption.cpp
portfolio/commodityoptionstrip.cpp
portfolio/commodityspreadoption.cpp
portfolio/commodityswap.cpp
portfolio/commodityswaption.cpp
portfolio/compositetrade.cpp
portfolio/convertiblebonddata.cpp
portfolio/convertiblebondreferencedata.cpp
portfolio/creditdefaultswap.cpp
portfolio/creditdefaultswapdata.cpp
portfolio/creditdefaultswapoption.cpp
portfolio/creditlinkedswap.cpp
portfolio/crosscurrencyswap.cpp
portfolio/durationadjustedcmslegbuilder.cpp
portfolio/durationadjustedcmslegdata.cpp
portfolio/enginedata.cpp
portfolio/enginefactory.cpp
portfolio/envelope.cpp
portfolio/equitybarrieroption.cpp
portfolio/equitydigitaloption.cpp
portfolio/equitydoublebarrieroption.cpp
portfolio/equitydoubletouchoption.cpp
portfolio/equityeuropeanbarrieroption.cpp
portfolio/equityforward.cpp
portfolio/equityfuturesoption.cpp
portfolio/equityfxlegbuilder.cpp
portfolio/equityfxlegdata.cpp
portfolio/equityoption.cpp
portfolio/equityswap.cpp
portfolio/equitytouchoption.cpp
portfolio/failedtrade.cpp
portfolio/fixingdates.cpp
portfolio/forwardbond.cpp
portfolio/forwardrateagreement.cpp
portfolio/fxaverageforward.cpp
portfolio/fxbarrieroption.cpp
portfolio/fxdigitalbarrieroption.cpp
portfolio/fxdigitaloption.cpp
portfolio/fxdoublebarrieroption.cpp
portfolio/fxdoubletouchoption.cpp
portfolio/fxeuropeanbarrieroption.cpp
portfolio/fxforward.cpp
portfolio/fxkikobarrieroption.cpp
portfolio/fxoption.cpp
portfolio/fxswap.cpp
portfolio/fxtouchoption.cpp
portfolio/indexcreditdefaultswap.cpp
portfolio/indexcreditdefaultswapdata.cpp
portfolio/indexcreditdefaultswapoption.cpp
portfolio/indexing.cpp
portfolio/inflationswap.cpp
portfolio/legbuilders.cpp
portfolio/legdata.cpp
portfolio/legdatafactory.cpp
portfolio/multilegoption.cpp
portfolio/nettingsetdefinition.cpp
portfolio/nettingsetdetails.cpp
portfolio/nettingsetmanager.cpp
portfolio/optiondata.cpp
portfolio/optionexercisedata.cpp
portfolio/optionpaymentdata.cpp
portfolio/optionwrapper.cpp
portfolio/portfolio.cpp
portfolio/premiumdata.cpp
portfolio/referencedata.cpp
portfolio/referencedatafactory.cpp
portfolio/schedule.cpp
portfolio/swap.cpp
portfolio/swaption.cpp
portfolio/trade.cpp
portfolio/tradeactions.cpp
portfolio/tradebarrier.cpp
portfolio/tradefactory.cpp
portfolio/trademonetary.cpp
portfolio/tradestrike.cpp
portfolio/tranche.cpp
portfolio/underlying.cpp
portfolio/vanillaoption.cpp
portfolio/varianceswap.cpp
report/csvreport.cpp
utilities/calendaradjustmentconfig.cpp
utilities/calendarparser.cpp
utilities/conventionsbasedfutureexpiry.cpp
utilities/correlationmatrix.cpp
utilities/csvfilereader.cpp
utilities/currencyconfig.cpp
utilities/currencyhedgedequityindexdecomposition.cpp
utilities/currencyparser.cpp
utilities/dategrid.cpp
utilities/fileio.cpp
utilities/filteredbufferedlogger.cpp
utilities/flowanalysis.cpp
utilities/indexnametranslator.cpp
utilities/indexparser.cpp
utilities/inflationstartdate.cpp
utilities/initbuilders.cpp
utilities/log.cpp
utilities/marketdata.cpp
utilities/osutils.cpp
utilities/parsers.cpp
utilities/progressbar.cpp
utilities/strike.cpp
utilities/to_string.cpp
utilities/wildcard.cpp
utilities/xmlutils.cpp)

# hpp files, this list is maintained manually

set(OREData_HDR auto_link.hpp
configuration/basecorrelationcurveconfig.hpp
configuration/bootstrapconfig.hpp
configuration/capfloorvolcurveconfig.hpp
configuration/cdsvolcurveconfig.hpp
configuration/commoditycurveconfig.hpp
configuration/commodityvolcurveconfig.hpp
configuration/conventions.hpp
configuration/correlationcurveconfig.hpp
configuration/curveconfig.hpp
configuration/curveconfigurations.hpp
configuration/defaultcurveconfig.hpp
configuration/equitycurveconfig.hpp
configuration/equityvolcurveconfig.hpp
configuration/fxspotconfig.hpp
configuration/fxvolcurveconfig.hpp
configuration/genericyieldvolcurveconfig.hpp
configuration/iborfallbackconfig.hpp
configuration/inflationcapfloorvolcurveconfig.hpp
configuration/inflationcurveconfig.hpp
configuration/onedimsolverconfig.hpp
configuration/reportconfig.hpp
configuration/securityconfig.hpp
configuration/swaptionvolcurveconfig.hpp
configuration/volatilityconfig.hpp
configuration/yieldcurveconfig.hpp
configuration/yieldvolcurveconfig.hpp
marketdata/adjustmentfactors.hpp
marketdata/basecorrelationcurve.hpp
marketdata/capfloorvolcurve.hpp
marketdata/cdsvolcurve.hpp
marketdata/clonedloader.hpp
marketdata/commoditycurve.hpp
marketdata/commodityvolcurve.hpp
marketdata/compositeloader.hpp
marketdata/correlationcurve.hpp
marketdata/csvloader.hpp
marketdata/curvespec.hpp
marketdata/curvespecparser.hpp
marketdata/defaultcurve.hpp
marketdata/dependencygraph.hpp
marketdata/equitycurve.hpp
marketdata/equityvolcurve.hpp
marketdata/expiry.hpp
marketdata/fittedbondcurvehelpermarket.hpp
marketdata/fixings.hpp
marketdata/fxtriangulation.hpp
marketdata/fxvolcurve.hpp
marketdata/genericyieldvolcurve.hpp
marketdata/inflationcapfloorvolcurve.hpp
marketdata/inflationcurve.hpp
marketdata/inmemoryloader.hpp
marketdata/loader.hpp
marketdata/market.hpp
marketdata/marketdatum.hpp
marketdata/marketdatumparser.hpp
marketdata/marketimpl.hpp
marketdata/security.hpp
marketdata/strike.hpp
marketdata/structuredcurveerror.hpp
marketdata/swaptionvolcurve.hpp
marketdata/todaysmarket.hpp
marketdata/todaysmarketcalibrationinfo.hpp
marketdata/todaysmarketparameters.hpp
marketdata/wrappedmarket.hpp
marketdata/yieldcurve.hpp
marketdata/yieldvolcurve.hpp
model/blackscholesmodelbuilder.hpp
model/blackscholesmodelbuilderbase.hpp
model/calibrationbasket.hpp
model/calibrationconfiguration.hpp
model/calibrationinstrumentfactory.hpp
model/calibrationinstruments/cpicapfloor.hpp
model/calibrationinstruments/yoycapfloor.hpp
model/calibrationinstruments/yoyswap.hpp
model/calibrationpointcache.hpp
model/commodityschwartzmodelbuilder.hpp
model/commodityschwartzmodeldata.hpp
model/crcirbuilder.hpp
model/crcirdata.hpp
model/crlgmbuilder.hpp
model/crlgmdata.hpp
model/crossassetmodelbuilder.hpp
model/crossassetmodeldata.hpp
model/eqbsbuilder.hpp
model/eqbsdata.hpp
model/fxbsbuilder.hpp
model/fxbsdata.hpp
model/hwbuilder.hpp
model/inflation/infdkbuilder.hpp
model/inflation/infdkdata.hpp
model/inflation/infjybuilder.hpp
model/inflation/infjydata.hpp
model/inflation/inflationmodeldata.hpp
model/irhwmodeldata.hpp
model/irlgmdata.hpp
model/irmodeldata.hpp
model/lgmbuilder.hpp
model/lgmdata.hpp
model/localvolmodelbuilder.hpp
model/marketobserver.hpp
model/modelbuilder.hpp
model/modeldata.hpp
model/modelparameter.hpp
model/structuredmodelerror.hpp
model/utilities.hpp
portfolio/asianoption.hpp
portfolio/barrierdata.hpp
portfolio/barrieroption.hpp
portfolio/barrieroptionwrapper.hpp
portfolio/basketdata.hpp
portfolio/bond.hpp
portfolio/bondoption.hpp
portfolio/bondrepo.hpp
portfolio/bondtotalreturnswap.hpp
portfolio/bondutils.hpp
portfolio/builders/asianoption.hpp
portfolio/builders/bond.hpp
portfolio/builders/bondoption.hpp
portfolio/builders/bondrepo.hpp
portfolio/builders/bondtotalreturnswap.hpp
portfolio/builders/cachingenginebuilder.hpp
portfolio/builders/capfloor.hpp
portfolio/builders/capflooredaverageonindexedcouponleg.hpp
portfolio/builders/capflooredcpileg.hpp
portfolio/builders/capfloorediborleg.hpp
portfolio/builders/capfloorednonstandardyoyleg.hpp
portfolio/builders/capflooredovernightindexedcouponleg.hpp
portfolio/builders/capflooredyoyleg.hpp
portfolio/builders/cdo.hpp
portfolio/builders/cliquetoption.hpp
portfolio/builders/cms.hpp
portfolio/builders/cmsspread.hpp
portfolio/builders/commodityapo.hpp
portfolio/builders/commodityapomodelbuilder.hpp
portfolio/builders/commodityasianoption.hpp
portfolio/builders/commodityforward.hpp
portfolio/builders/commodityoption.hpp
portfolio/builders/commodityspreadoption.hpp
portfolio/builders/commodityswap.hpp
portfolio/builders/commodityswaption.hpp
portfolio/builders/cpicapfloor.hpp
portfolio/builders/creditdefaultswap.hpp
portfolio/builders/creditdefaultswapoption.hpp
portfolio/builders/creditlinkedswap.hpp
portfolio/builders/currencyswap.hpp
portfolio/builders/durationadjustedcms.hpp
portfolio/builders/equityasianoption.hpp
portfolio/builders/equitybarrieroption.hpp
portfolio/builders/equitycompositeoption.hpp
portfolio/builders/equitydigitaloption.hpp
portfolio/builders/equitydoublebarrieroption.hpp
portfolio/builders/equitydoubletouchoption.hpp
portfolio/builders/equityforward.hpp
portfolio/builders/equityfuturesoption.hpp
portfolio/builders/equityoption.hpp
portfolio/builders/equitytouchoption.hpp
portfolio/builders/forwardbond.hpp
portfolio/builders/fxasianoption.hpp
portfolio/builders/fxbarrieroption.hpp
portfolio/builders/fxdigitalbarrieroption.hpp
portfolio/builders/fxdigitaloption.hpp
portfolio/builders/fxdoublebarrieroption.hpp
portfolio/builders/fxdoubletouchoption.hpp
portfolio/builders/fxforward.hpp
portfolio/builders/fxoption.hpp
portfolio/builders/fxtouchoption.hpp
portfolio/builders/indexcreditdefaultswap.hpp
portfolio/builders/indexcreditdefaultswapoption.hpp
portfolio/builders/multilegoption.hpp
portfolio/builders/quantoequityoption.hpp
portfolio/builders/quantovanillaoption.hpp
portfolio/builders/swap.hpp
portfolio/builders/swaption.hpp
portfolio/builders/vanillaoption.hpp
portfolio/builders/varianceswap.hpp
portfolio/builders/yoycapfloor.hpp
portfolio/capfloor.hpp
portfolio/cdo.hpp
portfolio/cliquetoption.hpp
portfolio/commodityapo.hpp
portfolio/commoditydigitalapo.hpp
portfolio/commoditydigitaloption.hpp
portfolio/commodityforward.hpp
portfolio/commoditylegbuilder.hpp
portfolio/commoditylegdata.hpp
portfolio/commodityoption.hpp
portfolio/commodityoptionstrip.hpp
portfolio/commodityspreadoption.hpp
portfolio/commodityswap.hpp
portfolio/commodityswaption.hpp
portfolio/compositeinstrumentwrapper.hpp
portfolio/compositetrade.hpp
portfolio/convertiblebonddata.hpp
portfolio/convertiblebondreferencedata.hpp
portfolio/creditdefaultswap.hpp
portfolio/creditdefaultswapdata.hpp
portfolio/creditdefaultswapoption.hpp
portfolio/creditlinkedswap.hpp
portfolio/crosscurrencyswap.hpp
portfolio/durationadjustedcmslegbuilder.hpp
portfolio/durationadjustedcmslegdata.hpp
portfolio/enginedata.hpp
portfolio/enginefactory.hpp
portfolio/envelope.hpp
portfolio/equitybarrieroption.hpp
portfolio/equityderivative.hpp
portfolio/equitydigitaloption.hpp
portfolio/equitydoublebarrieroption.hpp
portfolio/equitydoubletouchoption.hpp
portfolio/equityeuropeanbarrieroption.hpp
portfolio/equityforward.hpp
portfolio/equityfuturesoption.hpp
portfolio/equityfxlegbuilder.hpp
portfolio/equityfxlegdata.hpp
portfolio/equityoption.hpp
portfolio/equityswap.hpp
portfolio/equitytouchoption.hpp
portfolio/failedtrade.hpp
portfolio/fixingdates.hpp
portfolio/forwardbond.hpp
portfolio/forwardrateagreement.hpp
portfolio/fxaverageforward.hpp
portfolio/fxbarrieroption.hpp
portfolio/fxderivative.hpp
portfolio/fxdigitalbarrieroption.hpp
portfolio/fxdigitaloption.hpp
portfolio/fxdoublebarrieroption.hpp
portfolio/fxdoubletouchoption.hpp
portfolio/fxeuropeanbarrieroption.hpp
portfolio/fxforward.hpp
portfolio/fxkikobarrieroption.hpp
portfolio/fxoption.hpp
portfolio/fxswap.hpp
portfolio/fxtouchoption.hpp
portfolio/indexcreditdefaultswap.hpp
portfolio/indexcreditdefaultswapdata.hpp
portfolio/indexcreditdefaultswapoption.hpp
portfolio/indexing.hpp
portfolio/inflationswap.hpp
portfolio/instrumentwrapper.hpp
portfolio/legbuilders.hpp
portfolio/legdata.hpp
portfolio/legdatafactory.hpp
portfolio/multilegoption.hpp
portfolio/nettingsetdefinition.hpp
portfolio/nettingsetdetails.hpp
portfolio/nettingsetmanager.hpp
portfolio/optiondata.hpp
portfolio/optionexercisedata.hpp
portfolio/optionpaymentdata.hpp
portfolio/optionwrapper.hpp
portfolio/portfolio.hpp
portfolio/premiumdata.hpp
portfolio/referencedata.hpp
portfolio/referencedatafactory.hpp
portfolio/schedule.hpp
portfolio/structuredconfigurationerror.hpp
portfolio/structuredconfigurationwarning.hpp
portfolio/structuredtradeerror.hpp
portfolio/structuredtradewarning.hpp
portfolio/swap.hpp
portfolio/swaption.hpp
portfolio/trade.hpp
portfolio/tradeactions.hpp
portfolio/tradebarrier.hpp
portfolio/tradefactory.hpp
portfolio/trademonetary.hpp
portfolio/tradestrike.hpp
portfolio/tranche.hpp
portfolio/types.hpp
portfolio/underlying.hpp
portfolio/vanillaoption.hpp
portfolio/varianceswap.hpp
report/csvreport.hpp
report/inmemoryreport.hpp
report/report.hpp
utilities/calendaradjustmentconfig.hpp
utilities/calendarparser.hpp
utilities/conventionsbasedfutureexpiry.hpp
utilities/correlationmatrix.hpp
utilities/csvfilereader.hpp
utilities/currencyconfig.hpp
utilities/currencyhedgedequityindexdecomposition.hpp
utilities/currencyparser.hpp
utilities/dategrid.hpp
utilities/fileio.hpp
utilities/filteredbufferedlogger.hpp
utilities/flowanalysis.hpp
utilities/indexnametranslator.hpp
utilities/indexparser.hpp
utilities/inflationstartdate.hpp
utilities/initbuilders.hpp
utilities/log.hpp
utilities/marketdata.hpp
utilities/osutils.hpp
utilities/parsers.hpp
utilities/progressbar.hpp
utilities/serializationdate.hpp
utilities/serializationdaycounter.hpp
utilities/serializationperiod.hpp
utilities/strike.hpp
utilities/timeperiod.hpp
utilities/to_string.hpp
utilities/vectorutils.hpp
utilities/wildcard.hpp
utilities/xmlutils.hpp
version.hpp)

writeAll("ored" "ored.hpp" "auto_link.hpp" "${OREData_HDR}")
add_library(${ORED_LIB_NAME} ${OREData_SRC})
target_link_libraries(${ORED_LIB_NAME} ${QLE_LIB_NAME})
target_link_libraries(${ORED_LIB_NAME} ${QL_LIB_NAME})
target_link_libraries(${ORED_LIB_NAME} ${Boost_LIBRARIES})


install(DIRECTORY . DESTINATION include/ored
        FILES_MATCHING PATTERN "*.hpp" PATTERN "*.h")

install(TARGETS ${ORED_LIB_NAME}
        ARCHIVE DESTINATION lib
        LIBRARY DESTINATION lib
        PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
        )

